--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!--Korinne Bubb SDEV 300-->
+<!--Korinne Powell SDEV 300-->
 <!DOCTYPE html>
 <html lang="en">
     <!--created a base template to hold the basic web app structure-->
@@ -68,4 +68,5 @@
         </div>
             {% endblock %}
     </body>
+
 </html>
